# 2dv609

./: .gitignore  README.md  init_docker.sh  roles.md
docker/: README.md  name.md  postgres.Dockerfile  sandbox.sql
migration/: Cargo.toml
migration/src/: main.rs
rr/: Cargo.toml  README.md
rr/src/: main.rs
rr_api/: Cargo.toml  README.md
rr_api/migrations/: 20230401150450_create_users_table.sql  20230401150700_create_scenarios_table.sql  20230401164117_create_users_table.sql  20230401164204_create_scenarios_table.sql  20230401164239_populate_users.sql  20230401170134_drop_tables.sql  20230401170134_init.sql  20230403132254_add_more_scenarios.sql
rr_api/migrations/migration/src/: main.rs
rr_api/src/: endpoints_old.rs  errors.rs  main.rs  pg.rs
rr_api/src/db/: mod.rs  pg.rs  pool.rs  scenario_repo.rs  store.rs  user_repo.rs
rr_api/src/db/repos/: mod.rs  scenario_repo.rs  user_repo.rs
rr_api/src/endpoints/: mod.rs  scenario_eps.rs  user_eps.rs
rr_api/src/models/: mod.rs  scenario.rs  user.rs
rr_mobile/: README.md  pubspec.yaml
rr_mobile/android/app/: build.gradle
rr_mobile/assets/data/: scenarios.json
rr_mobile/assets/migrations/: scenarios.sql
rr_mobile/ios/: Podfile
rr_mobile/ios/Runner/: Info.plist
rr_mobile/ios/Runner.xcodeproj/: project.pbxproj
rr_mobile/lib/: app.dart  main.dart  routes.dart
rr_mobile/lib/models/: api.dart  migrations.dart  persistance.dart  rng_color.dart  (+3 more)
rr_mobile/linux/: CMakeLists.txt  my_application.cc
rr_mobile/test/: widget_test.dart
rr_mobile/web/: index.html  manifest.json
rr_mobile/windows/: CMakeLists.txt
sandbox/: pubspec.yaml
sandbox/windows/: CMakeLists.txt
(+21 files in other folders)
