[package]
name = "rr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
chrono = "0.4.24"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "sqlx-macros", "migrate"] }
tide = "0.16.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
