[package]
name = "rr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = "0.6.12"
axum-macros = "0.3.7"
chrono = "0.4.24"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "sqlx-macros", "migrate"] }
thiserror = "1.0.40"
tide = "0.16.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
